[package]
name = "learning_gfx-hal"
version = "0.1.0"
authors = ["Matthew Blake <mblak0625@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "triangle"
path = "src/bin/00-triangle.rs"

[[bin]]
name = "window"
path = "src/bin/01-window.rs"

[dependencies]
image = "0.22.2"
winit = "0.19.3"
gfx-hal = "0.3.1"
gfx-backend-vulkan = "0.3.3"

[build-dependencies]
glsl-to-spirv = "0.1.7"