[package]
name = "learning_gfx-hal"
version = "0.1.0"
authors = ["Matthew Blake <mblak0625@gmail.com>"]
edition = "2018"

[feature]
default = []
metal = ["gfx-backend-metal"]
dx12 = ["gfx-backend-dx12"]
vulkan = ["gfx-backend-vulkan"]

[dependencies]
winit = "0.19.3"
gfx-hal = "0.3.1"
env_logger = "0.7.0"
log = "0.4.8"

[dependencies.gfx-backend-vulkan]
version = "0.3.3"
optional = true

[target.'cfg(target_os = "macos")'.dependencies.gfx-backend-metal]
version = "0.3.3"
optional = true

[target.'cfg(windows)'.dependencies.gfx-backend-dx12]
version = "0.3.4"
optional = true